--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 		</div>
 		<div>
 			<ul>
-				<li>Facebook</li>
-				<li>twitter</li>
-				<li>Google</li>
-				<li>instagram</li>
-				<li>pinterest</li>
-				<li>linkedin</li>
+				<li><a>Facebook</a></li>
+				<li><a>twitter</a></li>
+				<li><a>Google</a></li>
+				<li><a>instagram</a></li>
+				<li><a>pinterest</a></li>
+				<li><a>linkedin</a></li>
 			</ul>
 		</div>
 	</div>
@@ -34,12 +34,12 @@
 		<div>
 			<nav>
 				<ul>
-					<li><a></a></li>
-					<li><a></a></li>
-					<li><a></a></li>
-					<li><a></a></li>
-					<li><a></a></li>
-					<li><a></a></li>
+					<li><a>Home</a></li>
+					<li><a>About Us</a></li>
+					<li><a>Services</a></li>
+					<li><a>Gallery</a></li>
+					<li><a>Blog</a></li>
+					<li><a>Contact</a></li>
 				</ul>
 			</nav>
 			<div>
@@ -48,40 +48,41 @@
 		</div>
 	</div>
 	<div class="wrapper, row" id="photo-1">
-		<h2></h2>
-		<h3></h3>
+		<h2>Welcome To Our</h2>
+		<h3>Clean, Modern, Multipurpose Theme</h3>
+		<p>Our team of professionals will help you turn your dream home or flat into a reality fast. The love boat promise something for everyone. Nowthe world don't move to the beat of just one.</p>
 		<p><a>Read more</a></p>
 	</div>
 	<div class="wrapper, row" id="gray">
 		<section>
 			<img/>
-			<h4></h4>
-			<p></p>
+			<h4>Professional Build</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
 		</section>
 		<section>
 			<img/>
-			<h4></h4>
-			<p></p>
+			<h4>We Deliver Quality</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
 		</section>
 		<section>
 			<img/>
-			<h4></h4>
-			<p></p>
+			<h4>Always On Time</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
 		</section>
 		<section>
 			<img/>
-			<h4></h4>
-			<p></p>
+			<h4>We Are Passionate</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
 		</section>
 	</div>
 	<div class="wrapper, row" id="about">
-		<h2></h2>
+		<h2>About Us</h2>
 		<!--add the line here-->
-		<p></p>
+		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
 		<section>
-			<h3></h3>
+			<h3>Who are we</h3>
 			<!--add the line-->
-			<p></p>
+			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarassing hidden in the middle of the text.</p>
 			<p><a>Contact now</a></p>
 		</section>
 		<section>
@@ -89,163 +90,163 @@
 		</section>
 	</div>
 	<div class="wrapper, row" id="yellow"><!--not sure how to do this section-->
-		<h2></h2>
+		<h2>what we offer</h2>
 		<!--add the line-->
-		<p></p>
+		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
 		<div>
 			<img/>
 			<section>
 				<img/>
-				<h4></h4>
-				<p></p>
+				<h4>Building Construction</h4>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
 			</section>
 		</div>
 		<div>
 			<img/>
 			<section>
 				<img/>
-				<h4></h4>
-				<p></p>
+				<h4>Project planning</h4>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
 			</section>
 		</div>
 		<div>
 			<img/>
 			<section>
 				<img/>
-				<h4></h4>
-				<p></p>
+				<h4>House renovation</h4>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
 			</section>
 		</div>
 	</div>
 	<div class="wrapper, row" id="features">
-		<h2></h2>
+		<h2>Our features</h2>
 		<!--add the line-->
-		<p></p>
+		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
 		<section>
 			<img/>
 		</section>
 		<section><!--not sure if I laid these out correctly-->
-			<h3></h3>
+			<h3>Why Choose us</h3>
 			<!--line-->
-			<p></p>
+			<p>There are many variations of passages of Lorem Ipsum available.</p>
 			<section>
 				<img/>
-				<h4></h4>
-				<p></p>
+				<h4>30+ years of experience</h4>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 			</section>
 			<section>
 				<img/>
-				<h4></h4>
-				<p></p>
+				<h4>qaulified experts</h4>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 			</section>
 			<section>
 				<img/>
-				<h4></h4>
-				<p></p>
+				<h4>best customer services</h4>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 			</section>
 		</section>
 	</div>
 	<div class="wrapper,row" id="photo-2">
-		<h2></h2>
+		<h2>our achievements</h2>
 		<!--line-->
-		<p></p>
+		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
 		<section>
 			<img/>
-			<h5></h5>
-			<p></p>
+			<h5>800</h5>
+			<p>Project completed</p>
 		</section>
 		<!--horizontal line-->
 		<section>
 			<img/>
-			<h5></h5>
-			<p></p>
+			<h5>229</h5>
+			<p>house renovations</p>
 		</section>
 		<!--horizontal line-->
 		<section>
 			<img/>
-			<h5></h5>
-			<p></p>
+			<h5>1390</h5>
+			<p>workers employed</p>
 		</section>
 		<!--horizontal line-->
 		<section>
 			<img/>
-			<h5></h5>
-			<p></p>
+			<h5>125</h5>
+			<p>awards won</p>
 		</section>
 	</div>
 	<div class="wrapper, row" id="blog">
-		<h3></h3>
+		<h3>Our latest blog</h3>
 		<!--line-->
-		<p></p>
+		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
 		<section>
 			<img/>
-			<h6></h6>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p><a></a></p>
+			<h6>Our Latest Project</h6>
+			<p>by Emran Khan</p>
+			<p>on october 15, 2016</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur adipiscing...</p>
+			<p><a>Read More</a></p>
 		</section>
 			<section>
 			<img/>
-			<h6></h6>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p><a></a></p>
+			<h6>Our Latest Project</h6>
+			<p>By Prodip ghosh</p>
+			<p>on October 15, 2016</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur adipiscing...</p>
+			<p><a>Read More</a></p>
 		</section>
 			<section>
 			<img/>
-			<h6></h6>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p><a></a></p>
+			<h6>Our Latest Project</h6>
+			<p>By Prodip ghosh</p>
+			<p>on October 15, 2016</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur adipiscing...</p>
+			<p><a>Read More</a></p>
 		</section>
 	</div>
 	<div class="wrapper, row" id="photo-3">
 		<section>
-			<h2></h2>
+			<h2>About Our company</h2>
 			<p>logo</p>
-			<p></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			<ul>
-				<li><a></a></li>
-				<li><a></a></li>
-				<li><a></a></li>
-				<li><a></a></li>
+				<li><a>Facebook</a></li>
+				<li><a>Twitter</a></li>
+				<li><a>Google</a></li>
+				<li><a>linkedin</a></li>
 			</ul>
 		</section>
 		<section>
-			<h2></h2>
+			<h2>Quick Links</h2>
 			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li><a>Building Construction</a></li>
+				<li><a>Home Renovation</a></li>
+				<li><a>Hardwood Flooring</a></li>
+				<li><a>Repairing of Roof</a></li>
+				<li><a>Commerical Construction</a></li>
+				<li><a>Concrete Transport</a></li>
 			</ul>
 		</section>
 		<section>
-			<h2></h2>
-			<p></p>
-			<p></p>
+			<h2>Twiiter Feed</h2>
+			<p>@colorlib:Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
+			<p>@colorlib:Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
 		</section>
 		<section>
-			<h2></h2>
-			<p></p>
+			<h2>Contact us</h2>
+			<p>Have questions, comments or just want to say hello:</p>
 			<img/>
-			<label></label>
-			<input>
+			<label for="mail">info@thethemspro.com</label>
+			<input type="email" id="mail" name="mail">
 			<img/>
-			<label></label>
-			<input>
+			<label for="number">+880 123 456 789</label>
+			<input type="tel" id="number" name="number">
 			<img/>
-			<label></label>
-			<input>
+			<label for="place">Sector #10, Road # 05, Plot #31, Uttara, Dhaka 1230</label>
+			<input type="search" id="place" name="place">
 		</section>
 	</div>
 	<footer>
-		<p></p>
+		<p>Copyright 2017 All rights reserved. Designed by Colorlib.</p>
 	</footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="js/functions.js"></script>
