finishing the html
checking making sure I have everything before moving to css.

--- a/index.html
+++ b/index.html
@@ -8,38 +8,34 @@
 </head>
 
 <body>
-<header class="wrapper" id="navy-box">
-	<div class="row">
+<header class="wrapper, row" id="navy-box">
+	<div>
 		<div><!--all these will need an icon-->
-			<label for="phone">+1(168)314 5016</label>
-			<input type="tel" id="phone" name="phone">
-			<label for="email">email:info@themspro.com</label>
-			<input type="email" id="email" name="email">
+			<p>+1 (168) 314 5016</p>
+			<p>email:infor@themspro.com</p>
 			<label>Mon-Sat 12:00-20:00</label>
-		</div>
-		<div>
 			<ul>
-				<li><a>Facebook</a></li>
-				<li><a>twitter</a></li>
-				<li><a>Google</a></li>
-				<li><a>instagram</a></li>
-				<li><a>pinterest</a></li>
-				<li><a>linkedin</a></li>
+				<li><a href="http://www.facebook.com" target="_blank">Facebook</a></li>
+				<li><a href="http://www.twitter.com" target="_blank">twitter</a></li>
+				<li><a href="http://www.google.com" target="_blank">Google</a></li>
+				<li><a href="http://www.instagram.com" target="_blank">instagram</a></li>
+				<li><a href="http://www.pinterest.com" target="_blank">pinterest</a></li>
+				<li><a href="http://www.linkedin.com" target="_blank">linkedin</a></li>
 			</ul>
 		</div>
 	</div>
 </header>
 	<div class="wrapper" id="white-box">
-		<h1>logo</h1>
+		<h1>TopBuilder</h1>
 		<div>
 			<nav>
 				<ul>
-					<li><a>Home</a></li>
-					<li><a>About Us</a></li>
-					<li><a>Services</a></li>
-					<li><a>Gallery</a></li>
-					<li><a>Blog</a></li>
-					<li><a>Contact</a></li>
+					<li><a href="#">Home</a></li>
+					<li><a href="#about">About Us</a></li>
+					<li><a href="#services">Services</a></li>
+					<li><a href="#features">Gallery</a></li>
+					<li><a href="#blog">Blog</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
 			<div>
@@ -89,7 +85,7 @@
 			<img/>
 		</section>
 	</div>
-	<div class="wrapper, row" id="yellow"><!--not sure how to do this section-->
+	<div class="wrapper, row" id="services"><!--not sure how to do this section-->
 		<h2>what we offer</h2>
 		<!--add the line-->
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
@@ -203,7 +199,7 @@
 			<p><a>Read More</a></p>
 		</section>
 	</div>
-	<div class="wrapper, row" id="photo-3">
+	<div class="wrapper, row" id="contact">
 		<section>
 			<h2>About Our company</h2>
 			<p>logo</p>
