fixing more issues
have just a couple more to finish then moving to the css and getting more feedback

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</ul>
 	</div>
 	<div class="wrapper row" id="white-box">
-		<div id="float-left">
+		<div class="float-left">
 			<header>
 				<h1>TopBuilder</h1>
 			</header>
@@ -53,28 +53,28 @@
 </header>
 	<div id="gray">
 		<div class="wrapper row">
-			<section>
+			<section class="col-1-4">
 				<img/>
 				<header>
 					<h2>Professional Build</h2>
 				</header>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
 			</section>
-			<section>
+			<section class="col-1-4">
 				<img/>
 				<header>
 					<h2>We Deliver Quality</h2>
 				</header>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
 			</section>
-			<section>
+			<section class="col-1-4">
 				<img/>
 				<header>
 					<h2>Always On Time</h2>
 				</header>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
 			</section>
-			<section>
+			<section class="col-1-4">
 				<img/>
 				<header>
 					<h2>We Are Passionate</h2>
@@ -85,132 +85,130 @@
 	</div>
 	<div class="wrapper row" id="about">
 		<header>
-			<h3>About Us</h3>
+			<h2>About Us</h2>
 		</header>
 		<!--add the line here-->
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-		<section>
+		<div class="float-left">
 			<header>
-				<h4>Who are we</h4>
+				<h3>Who are we</h3>
 			</header>
 			<!--add the line-->
 			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarassing hidden in the middle of the text.</p>
 			<p><a>Contact now</a></p>
-		</section>
-		<section>
+		</div>
+		<div class="float-right">
 			<img/>
-		</section>
+		</div>
 	</div>
 	<div class="wrapper row" id="services"><!--not sure how to do this section-->
 		<header>
-			<h3>what we offer</h3>
+			<h2>what we offer</h2>
 		</header>
 		<!--add the line-->
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+	<div class="float-left">
 		<div>
 			<img/>
-			<section>
+			<div class="col-1-3">
 				<img/>
 				<header>
-					<h4>Building Construction</h4>
+					<h3>Building Construction</h3>
 				</header>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
-			</section>
-		</div>
-		<div>
-			<img/>
-			<section>
-				<img/>
-				<header>
-					<h4>Project planning</h4>
-				</header>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
-			</section>
-		</div>
-		<div>
-			<img/>
-			<section>
-				<img/>
-				<header>
-					<h4>House renovation</h4>
-				</header>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
-			</section>
+			</div>
 		</div>
 	</div>
+	<div class="float-middle">
+		<div>
+			<img/>
+			<div class="col-1-3">
+				<img/>
+				<header>
+					<h3>Project planning</h3>
+				</header>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
+			</div>
+		</div>
+	</div>
+	<div class="float-right">
+		<div>
+			<img/>
+			<div class="col-1-3">
+				<img/>
+				<header>
+					<h3>House renovation</h3>
+				</header>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
+			</div>
+		</div>
+	</div>
+</div>
 	<div class="wrapper row" id="features">
 		<header>
-			<h3>Our features</h3>
+			<h2>Our features</h2>
 		</header>
 		<!--add the line-->
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-		<section>
+		<div class="float-left">
 			<img/>
-		</section>
-		<section><!--not sure if I laid these out correctly-->
-			<header>
-				<h4>Why Choose us</h4>
-			</header>
+		</div>
+		<div class="float-right"><!--not sure if I laid these out correctly-->
+			<p>Why Choose us</p>
 			<!--line-->
 			<p>There are many variations of passages of Lorem Ipsum available.</p>
-			<section>
+			<div>
 				<img/>
-				<header>
-					<h4>30+ years of experience</h4>
-				</header>
+				<p>30+ years of experience</p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			</section>
-			<section>
+			</div>
+			<div>
 				<img/>
-				<header>
-					<h4>qaulified experts</h4>
-				</header>
+				<p>qaulified experts</p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			</section>
-			<section>
+			</div>
+			<div>
 				<img/>
-				<header>
-					<h4>best customer services</h4>
-				</header>
+				<p>best customer services</p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-			</section>
-		</section>
+			</div>
+		</div>
 	</div>
 	<div id="photo-2">
 		<div class="wrapper row">
 			<header>
-				<h3>our achievements</h3>
+				<h2>our achievements</h2>
 			</header>
 			<!--line-->
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-			<section>
+			<section class="col-1-4">
 				<img/>
 				<header>
-					<h5>800</h5>
+					<h3>800</h3>
 				</header>
 				<p>Project completed</p>
 			</section>
 			<!--horizontal line-->
-			<section>
+			<section class="col-1-4">
 				<img/>
 				<header>
-					<h5>229</h5>
+					<h3>229</h3>
 				</header>
 				<p>house renovations</p>
 			</section>
 			<!--horizontal line-->
-			<section>
+			<section class="col-1-4">
 				<img/>
 				<header>
-					<h5>1390</h5>
+					<h3>1390</h3>
 				</header>
 				<p>workers employed</p>
 			</section>
 			<!--horizontal line-->
-			<section>
+			<section class="col-1-4">
 				<img/>
 				<header>
-					<h5>125</h5>
+					<h3>125</h3>
 				</header>
 				<p>awards won</p>
 			</section>
@@ -218,11 +216,11 @@
 	</div>
 	<div class="wrapper row" id="blog">
 		<header>
-			<h3>Our latest blog</h3>
+			<h2>Our latest blog</h2>
 		</header>
 		<!--line-->
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-		<section>
+		<section class="col-1-3">
 			<img/>
 			<h6>Our Latest Project</h6>
 			<p>by Emran Khan</p>
@@ -230,25 +228,25 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur adipiscing...</p>
 			<p><a>Read More</a></p>
 		</section>
-			<section>
-			<img/>
-			<h6>Our Latest Project</h6>
-			<p>By Prodip ghosh</p>
-			<p>on October 15, 2016</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur adipiscing...</p>
-			<p><a>Read More</a></p>
+			<section class="col-1-3">
+				<img/>
+				<h6>Our Latest Project</h6>
+				<p>By Prodip ghosh</p>
+				<p>on October 15, 2016</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur adipiscing...</p>
+				<p><a>Read More</a></p>
 		</section>
-			<section>
-			<img/>
-			<h6>Our Latest Project</h6>
-			<p>By Prodip ghosh</p>
-			<p>on October 15, 2016</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur adipiscing...</p>
-			<p><a>Read More</a></p>
-		</section>
+			<section class="col-1-3">
+				<img/>
+				<h6>Our Latest Project</h6>
+				<p>By Prodip ghosh</p>
+				<p>on October 15, 2016</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur adipiscing...</p>
+				<p><a>Read More</a></p>
+			</section>
 	</div>
 	<div class="wrapper row" id="contact">
-		<section>
+		<section class="col-1-4">
 			<header>
 				<h3>About Our company</h3>
 			</header>
@@ -261,7 +259,7 @@
 				<li><a href="http://www.linkedin.com"><span>linkedin</span></a></li>
 			</ul>
 		</section>
-		<section>
+		<section class="col-1-4">
 			<header>
 				<h3>Quick Links</h3>
 			</header>
@@ -274,14 +272,14 @@
 				<li><a href="#services">Concrete Transport</a></li>
 			</ul>
 		</section>
-		<section>
+		<section class="col-1-4">
 			<header>
 				<h3>Twiiter Feed</h3>
 			</header>
 			<p>@colorlib:Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
 			<p>@colorlib:Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
 		</section>
-		<section>
+		<section class="col-1-4">
 			<header>
 				<h3>Contact us</h3>
 			</header>
