--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://use.fontawesome.com/881110210c.js"></script>
+<script src="https://kit.fontawesome.com/1d7a561d33.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <link rel="stylesheet" type="text/css" href="css/framework.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -18,11 +18,11 @@
 		<p>Mon-Sat <time>12:00</time>-<time>20:00</time></p>
 			<ul>
 				<li><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i><span>Facebook</span></a></li>
-				<li><a href="http://www.twitter.com" target="_blank"><i class=""></i><span>twitter</span></a></li>
-				<li><a href="http://www.google.com" target="_blank"><i class=""></i><span>Google</span></a></li>
-				<li><a href="http://www.instagram.com" target="_blank"><i class=""></i><span>instagram</span></a></li>
-				<li><a href="http://www.pinterest.com" target="_blank"><i class=""></i><span>pinterest</span></a></li>
-				<li><a href="http://www.linkedin.com" target="_blank"><i class=""></i><span>linkedin</span></a></li>
+				<li><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i><span>twitter</span></a></li>
+				<li><a href="http://www.google.com" target="_blank"><i class="fab fa-google"></i><span>Google</span></a></li>
+				<li><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i><span>instagram</span></a></li>
+				<li><a href="http://www.pinterest.com" target="_blank"><i class="fab fa-pinterest-p"></i><span>pinterest</span></a></li>
+				<li><a href="http://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i><span>linkedin</span></a></li>
 			</ul>
 	</div>
 	<div class="wrapper row" id="white-box">
@@ -89,15 +89,15 @@
 		</header>
 		<!--add the line here-->
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-		<div class="float-left">
+		<section class="float-left">
 			<header>
 				<h3>Who are we</h3>
 			</header>
 			<!--add the line-->
 			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarassing hidden in the middle of the text.</p>
 			<p><a>Contact now</a></p>
-		</div>
-		<div class="float-right">
+		</section>
+		<section class="float-right">
 			<img/>
 		</div>
 	</div>
@@ -110,37 +110,37 @@
 	<div class="float-left">
 		<div>
 			<img/>
-			<div class="col-1-3">
+			<section class="col-1-3">
 				<img/>
 				<header>
 					<h3>Building Construction</h3>
 				</header>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
-			</div>
+			</section>
 		</div>
 	</div>
 	<div class="float-middle">
 		<div>
 			<img/>
-			<div class="col-1-3">
+			<section class="col-1-3">
 				<img/>
 				<header>
 					<h3>Project planning</h3>
 				</header>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
-			</div>
+			</section>
 		</div>
 	</div>
 	<div class="float-right">
 		<div>
 			<img/>
-			<div class="col-1-3">
+			<section class="col-1-3">
 				<img/>
 				<header>
 					<h3>House renovation</h3>
 				</header>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
-			</div>
+			</section>
 		</div>
 	</div>
 </div>
@@ -181,37 +181,37 @@
 			</header>
 			<!--line-->
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-			<section class="col-1-4">
+			<div class="col-1-4">
 				<img/>
 				<header>
 					<h3>800</h3>
 				</header>
 				<p>Project completed</p>
-			</section>
+			</div>
 			<!--horizontal line-->
-			<section class="col-1-4">
+			<div class="col-1-4">
 				<img/>
 				<header>
 					<h3>229</h3>
 				</header>
 				<p>house renovations</p>
-			</section>
+			</div>
 			<!--horizontal line-->
-			<section class="col-1-4">
+			<div class="col-1-4">
 				<img/>
 				<header>
 					<h3>1390</h3>
 				</header>
 				<p>workers employed</p>
-			</section>
+			</div>
 			<!--horizontal line-->
-			<section class="col-1-4">
+			<div class="col-1-4">
 				<img/>
 				<header>
 					<h3>125</h3>
 				</header>
 				<p>awards won</p>
-			</section>
+			</div>
 		</div>
 	</div>
 	<div class="wrapper row" id="blog">
@@ -222,25 +222,31 @@
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
 		<section class="col-1-3">
 			<img/>
-			<h6>Our Latest Project</h6>
-			<p>by Emran Khan</p>
-			<p>on october 15, 2016</p>
+			<p>Our Latest Project</p>
+			<ul>
+				<li>by Emran Khan</li>
+				<li>on october 15, 2016</li>
+			</ul>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur adipiscing...</p>
 			<p><a>Read More</a></p>
 		</section>
 			<section class="col-1-3">
 				<img/>
-				<h6>Our Latest Project</h6>
-				<p>By Prodip ghosh</p>
-				<p>on October 15, 2016</p>
+				<p>Our Latest Project</p>
+				<ul>
+					<li>By Prodip ghosh</li>
+					<li>on October 15, 2016</li>
+				</ul>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur adipiscing...</p>
 				<p><a>Read More</a></p>
 		</section>
 			<section class="col-1-3">
 				<img/>
-				<h6>Our Latest Project</h6>
-				<p>By Prodip ghosh</p>
-				<p>on October 15, 2016</p>
+				<p>Our Latest Project</p>
+				<ul>
+					<li>By Prodip ghosh</li>
+					<li>on October 15, 2016</li>
+				</ul>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat lacus laoreet non curabitur gravida arcu ac. Consectetur adipiscing...</p>
 				<p><a>Read More</a></p>
 			</section>
