--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-<header class="wrapper row" id="navy-box">
-	<div><!--all these will need an icon-->
-		<p><a href="tel:+11683145016">+1 (168) 314 5016</a></p>
-		<p><a href="mailto:infor@themspro.com">email:info@themspro.com</a></p>
-		<p>Mon-Sat <time>12:00</time>-<time>20:00</time></p>
+<header class="wrapper row"  id="navy-box">
+	<div>
+		<p><i class="fas fa-phone"></i> <a href="tel:+11683145016">+1 (168) 314 5016</a></p>
+		<p><i class="fas fa-envelope"></i><a href="mailto:infor@themspro.com">email:info@themspro.com</a></p>
+		<p><i class="fas fa-clock"></i>Mon-Sat <time>12:00</time>-<time>20:00</time></p>
 			<ul>
 				<li><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i><span>Facebook</span></a></li>
 				<li><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i><span>twitter</span></a></li>
@@ -54,31 +54,23 @@
 	<div id="gray">
 		<div class="wrapper row">
 			<section class="col-1-4">
-				<img/>
-				<header>
-					<h2>Professional Build</h2>
-				</header>
+				<i class="fas fa-home"></i>
+				<p><b>Professional Build</b></p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
 			</section>
 			<section class="col-1-4">
-				<img/>
-				<header>
-					<h2>We Deliver Quality</h2>
-				</header>
+				<i class="far fa-building"></i>
+				<p><b>We Deliver Quality</b></p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
 			</section>
 			<section class="col-1-4">
-				<img/>
-				<header>
-					<h2>Always On Time</h2>
-				</header>
+				<i class="fas fa-clock"></i>
+				<p><b>Always On Time</b></p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
 			</section>
 			<section class="col-1-4">
-				<img/>
-				<header>
-					<h2>We Are Passionate</h2>
-				</header>
+				<i class="far fa-thumbs-up"></i>
+				<p><b>We Are Passionate</b></p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
 			</section>
 		</div>
@@ -89,15 +81,15 @@
 		</header>
 		<!--add the line here-->
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-		<section class="float-left">
-			<header>
-				<h3>Who are we</h3>
-			</header>
-			<!--add the line-->
-			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarassing hidden in the middle of the text.</p>
-			<p><a>Contact now</a></p>
-		</section>
-		<section class="float-right">
+		<div class="float-left">
+			<section>
+				<p><b>Who are we</b></p>
+				<!--add the line-->
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarassing hidden in the middle of the text.</p>
+				<p><a href="#contact">Contact now</a></p>
+			</section>
+		</div>
+		<div class="float-right">
 			<img/>
 		</div>
 	</div>
@@ -111,22 +103,18 @@
 		<div>
 			<img/>
 			<section class="col-1-3">
-				<img/>
-				<header>
-					<h3>Building Construction</h3>
-				</header>
+				<i class="fas fa-home"></i>
+				<p><b>Building Construction</b></p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
 			</section>
 		</div>
 	</div>
-	<div class="float-middle">
+	<div class="float-left">
 		<div>
 			<img/>
 			<section class="col-1-3">
-				<img/>
-				<header>
-					<h3>Project planning</h3>
-				</header>
+				<i class="far fa-keyboard"></i>
+				<p><b>Project planning</b></p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
 			</section>
 		</div>
@@ -135,10 +123,8 @@
 		<div>
 			<img/>
 			<section class="col-1-3">
-				<img/>
-				<header>
-					<h3>House renovation</h3>
-				</header>
+				<i class="fas fa-tools"></i>
+				<p><b>House renovation</b></p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy.</p>
 			</section>
 		</div>
@@ -154,22 +140,22 @@
 			<img/>
 		</div>
 		<div class="float-right"><!--not sure if I laid these out correctly-->
-			<p>Why Choose us</p>
+			<p><b>Why Choose us</b></p>
 			<!--line-->
 			<p>There are many variations of passages of Lorem Ipsum available.</p>
 			<div>
 				<img/>
-				<p>30+ years of experience</p>
+				<p><b>30+ years of experience</b></p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 			</div>
 			<div>
 				<img/>
-				<p>qaulified experts</p>
+				<p><b>qualified experts</b></p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 			</div>
 			<div>
 				<img/>
-				<p>best customer services</p>
+				<p><b>best customer services</b></p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 			</div>
 		</div>
