--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-<header class="wrapper row"  id="navy-box">
-	<div>
+<header class="wrapper row">
+	<div id="navy-box">
 		<p><i class="fas fa-phone"></i> <a href="tel:+11683145016">+1 (168) 314 5016</a></p>
 		<p><i class="fas fa-envelope"></i><a href="mailto:infor@themspro.com">email:info@themspro.com</a></p>
 		<p><i class="fas fa-clock"></i>Mon-Sat <time>12:00</time>-<time>20:00</time></p>
@@ -39,7 +39,7 @@
 					<li><a href="#features">Gallery</a></li>
 					<li><a href="#blog">Blog</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a href="#">search</a></li>
+					<li><a href="#"><i class="fas fa-search"></i></a></li>
 				</ul>
 			</nav>
 	</div>
@@ -89,9 +89,9 @@
 				<p><a href="#contact">Contact now</a></p>
 			</section>
 		</div>
-		<div class="float-right">
-			<img/>
-		</div>
+			<div class="float-right">
+				<img src="img/about-img.jpg" alt="about">
+			</div>
 	</div>
 	<div class="wrapper row" id="services"><!--not sure how to do this section-->
 		<header>
@@ -101,7 +101,7 @@
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
 	<div class="float-left">
 		<div>
-			<img/>
+			<img src="img/building-img.jpg" alt="building">
 			<section class="col-1-3">
 				<i class="fas fa-home"></i>
 				<p><b>Building Construction</b></p>
@@ -111,7 +111,7 @@
 	</div>
 	<div class="float-left">
 		<div>
-			<img/>
+			<img src="img/planning-img.jpg" alt="planning">
 			<section class="col-1-3">
 				<i class="far fa-keyboard"></i>
 				<p><b>Project planning</b></p>
@@ -121,7 +121,7 @@
 	</div>
 	<div class="float-right">
 		<div>
-			<img/>
+			<img src="img/house-img.jpg" alt="house">
 			<section class="col-1-3">
 				<i class="fas fa-tools"></i>
 				<p><b>House renovation</b></p>
@@ -137,24 +137,24 @@
 		<!--add the line-->
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
 		<div class="float-left">
-			<img/>
+			<img src="img/features-img.jpg" alt="features">
 		</div>
 		<div class="float-right"><!--not sure if I laid these out correctly-->
 			<p><b>Why Choose us</b></p>
 			<!--line-->
 			<p>There are many variations of passages of Lorem Ipsum available.</p>
 			<div>
-				<img/>
+				<i class="fas fa-wrench"></i>
 				<p><b>30+ years of experience</b></p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 			</div>
 			<div>
-				<img/>
+				<i class="fas fa-rocket"></i>
 				<p><b>qualified experts</b></p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 			</div>
 			<div>
-				<img/>
+				<i class="fas fa-users"></i>
 				<p><b>best customer services</b></p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 			</div>
@@ -168,7 +168,7 @@
 			<!--line-->
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
 			<div class="col-1-4">
-				<img/>
+				<i class="fas fa-certificate"></i>
 				<header>
 					<h3>800</h3>
 				</header>
@@ -176,7 +176,7 @@
 			</div>
 			<!--horizontal line-->
 			<div class="col-1-4">
-				<img/>
+				<i class="fas fa-home"></i>
 				<header>
 					<h3>229</h3>
 				</header>
@@ -184,7 +184,7 @@
 			</div>
 			<!--horizontal line-->
 			<div class="col-1-4">
-				<img/>
+				<i class="fas fa-child"></i>
 				<header>
 					<h3>1390</h3>
 				</header>
@@ -192,7 +192,7 @@
 			</div>
 			<!--horizontal line-->
 			<div class="col-1-4">
-				<img/>
+				<i class="fas fa-trophy"></i>
 				<header>
 					<h3>125</h3>
 				</header>
@@ -207,7 +207,7 @@
 		<!--line-->
 		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
 		<section class="col-1-3">
-			<img/>
+			<img src="img/blog-story-one.jpg" alt="story one">
 			<p>Our Latest Project</p>
 			<ul>
 				<li>by Emran Khan</li>
@@ -217,7 +217,7 @@
 			<p><a>Read More</a></p>
 		</section>
 			<section class="col-1-3">
-				<img/>
+				<img src="img/blog story two.jpg" alt="story two">
 				<p>Our Latest Project</p>
 				<ul>
 					<li>By Prodip ghosh</li>
@@ -227,7 +227,7 @@
 				<p><a>Read More</a></p>
 		</section>
 			<section class="col-1-3">
-				<img/>
+				<img src="img/blog story three.jpg" alt="story three">
 				<p>Our Latest Project</p>
 				<ul>
 					<li>By Prodip ghosh</li>
@@ -242,13 +242,13 @@
 			<header>
 				<h3>About Our company</h3>
 			</header>
-			<p>logo</p>
+			<p><b>TopBuilder</b></p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			<ul>
-				<li><a href="http://www.facebook.com"><span>Facebook</span></a></li>
-				<li><a href="http://www.twitter.com"><span>Twitter</span></a></li>
-				<li><a href="http://www.google.com"><span>Google</span></a></li>
-				<li><a href="http://www.linkedin.com"><span>linkedin</span></a></li>
+				<li><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i><span>Facebook</span></a></li>
+				<li><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i><span>twitter</span></a></li>
+				<li><a href="http://www.google.com" target="_blank"><i class="fab fa-google"></i><span>Google</span></a></li>
+				<li><a href="http://www.linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i><span>linkedin</span></a></li>
 			</ul>
 		</section>
 		<section class="col-1-4">
